--- a/index.html
+++ b/index.html
@@ -275,7 +275,6 @@
     <!-- Milestones Navigation -->
     <section class="section">
         <h2 class="section-title">Milestones</h2>
-        <p class="section-subtitle">Navighează rapid la etapele cheie ale proiectului nostru</p>
         <div class="milestone-buttons">
             <a href="#milestone1">Milestone 1</a>
             <!-- <a href="#milestone2">🚀 Milestone 2</a>
@@ -283,6 +282,7 @@
         </div>
     </section>
 
+    <h2 class="section-title">Milestone 1 </h2>
     <!-- Team Section -->
     <div class="container" id="milestone1">
         <section class="section">
