--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
         </div>
     </section>
 
-    <h2 class="section-title">Milestone 1 </h2>
+    <h2 class="section-title" id="milestone1">Milestone 1 </h2>
     <!-- Team Section -->
-    <div class="container" id="milestone1">
+    <div class="container">
         <section class="section">
             <h2 class="section-title">Echipa Noastră</h2>
             <p class="section-subtitle">Oameni pasionați care construiesc viitorul drumeției montane</p>
