--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <section class="hero">
         <h1>🏔️ TrailMates</h1>
         <p>Conectează. Explorează. Aventurează-te.</p>
-        <p style="font-size: 1.1em; opacity: 0.9;">Aplicație ta pentru organizarea drumețiilor montane și găsirea de parteneri de drumeție</p>
+        <p style="font-size: 1.1em; opacity: 0.9;">Aplicația ta pentru organizarea drumețiilor montane și găsirea de parteneri de drumeție</p>
     </section>
 
     <!-- Milestones Navigation -->
@@ -293,7 +293,7 @@
                 <div class="team-member">
                     <img src="ArghirMonica.jpeg" alt="Monica Arghir">
                     <h3>Monica Arghir</h3>
-                    <p class="role">PR și Management</p>
+                    <p class="role">PR și Marketing</p>
                     <a href="mailto:marghir4@gmail.com" class="email">marghir4@gmail.com</a>
                 </div>
 
@@ -307,7 +307,7 @@
                 <div class="team-member">
                     <img src="AlexandraDragusin.jpg" alt="Alexandra Dragusin">
                     <h3>Alexandra Dragusin</h3>
-                    <p class="role">UX/UI</p>
+                    <p class="role">Designer UX/UI</p>
                     <a href="mailto:dragusinalexandraaa@gmail.com" class="email">dragusinalexandraaa@gmail.com</a>
                 </div>
 
@@ -338,7 +338,7 @@
         <section class="section">
             <h2 class="section-title">Problema</h2>
             <p class="content-text">
-                Chiar dacă interesul pentru drumeții este în creștere, mulți români renunță la ideea de a merge pe munte din lipsă de parteneri de încredere sau de metode organizate de planificare. De cele mai multe ori, activitățile montane sunt inițiate în cercuri restrânse de prieteni, alături de familie sau prin intermediul unor canale informale, ceea ce limitează accesul altor persoane interesate care nu fac parte din aceste grupuri și reduce oportunitățile de a crea un cerc de persoane mai mari și mai diverse.
+                Chiar dacă interesul pentru drumeții este în creștere, mulți români renunță la ideea de a merge pe munte din lipsa de parteneri de încredere sau de metode organizate de planificare. De cele mai multe ori, activitățile montane sunt inițiate în cercuri restrânse de prieteni, alături de familie sau prin intermediul unor canale informale, ceea ce limitează accesul altor persoane interesate care nu fac parte din aceste grupuri și reduce oportunitățile de a crea un cerc de persoane mai mari și mai diverse.
             </p>
             <p class="content-text">
                 În plus, absența unei comunități online sigure și organizate, unde utilizatorii să poată comunica deschis și să facă schimb de experiențe anterioare, creează neîncredere față de străini, ceea ce îi face pe mulți să evite să meargă în drumeții cu persoane necunoscute.
@@ -355,10 +355,10 @@
                 Soluția propusă este o aplicație mobilă dedicată organizării drumețiilor montane în România, gândită pentru utilizatorii care doresc să facă trasee într-un mod mai organizat și mai sigur. Aplicația oferă posibilitatea utilizatorilor să se înscrie la trasee deja create de alți utilizatori, să-și creeze propriile rute folosind o hartă interactivă, iar la finalul expediției să lase recenzii însoțite de imagini și comentarii despre experiența lor.
             </p>
             <p class="content-text">
-                Mai mult decât atât, utilizatorii pot acorda un scor partenerilor de călătorie, ce poate fi văzut în secțiune de rating pe pagina de profil, crescând astfel încrederea atât în comunitate, cât și în soluția noastră.
+                Mai mult decât atât, utilizatorii pot acorda un scor partenerilor de călătorie, ce poate fi văzut în secțiunea de rating pe pagina de profil, crescând astfel încrederea atât în comunitate, cât și în soluția noastră.
             </p>
             <p class="content-text">
-                Pentru partea de cartografiere ne propunem să folosim un API care ne permite să afișăm trasee montane marcate oficial în România, dar și locații de interes precum cabane, vârfuri sau refugii. Ne dorim o reprezentare vizuală clară a traseelor montane, personalizabilă și intuitivă, care îi ajută pe utilizatori să vadă exact cum arată traseul înainte să plece la drum.
+                Pentru partea de cartografiere ne propunem să folosim un API care permite afișarea traseelor montane marcate oficial în România, dar și locații de interes precum cabane, vârfuri sau refugii. Ne dorim o reprezentare vizuală clară a traseelor montane, personalizabilă și intuitivă, care îi va ajuta pe utilizatori să vadă exact cum arată traseul înainte să plece la drum.
             </p>
         </section>
 
@@ -390,7 +390,7 @@
             <div class="feature-grid">
                 <div class="feature-card">
                     <h3>Meetup</h3>
-                    <p>Platformă internațională excelentă pentru conectarea socială și găsirea de parteneri, dar îi lipsește partea tehnică specifică drumeților - fără planificator de trasee sau hărți interactive pentru România.</p>
+                    <p>Platformă internațională pentru conectarea socială și găsirea de parteneri, dar îi lipsește partea tehnică specifică drumeților - fără planificator de trasee sau hărți interactive pentru România.</p>
                 </div>
 
                 <div class="feature-card">
@@ -412,7 +412,7 @@
             <div class="highlight-box" style="margin-top: 40px;">
                 <h3>Avantajul nostru competitiv</h3>
                 <p style="margin-bottom: 15px; font-size: 1.1em;">
-                    <strong>TrailMates</strong> este singura platformă care îmbină toate cele cinci criterii esențiale:
+                    <strong>TrailMates</strong> este platforma care îmbină criteriile esențiale:
                 </p>
                 <ul>
                     <li>Găsirea de parteneri de drumeție</li>
