--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
 
 			<h3 class="subsection-title">Metode de cercetare</h3>
 			<p class="content-text">
-				Am desfășurat interviuri față în față și apeluri video, realizând în total <strong>[TODO] interviuri</strong>. 
+				Am desfășurat interviuri față în față și apeluri video, realizând în total <strong>9 interviuri</strong>. 
 				Participanții au fost colegi de muncă și prieteni despre care știam deja că sunt pasionați de drumeții montane 
 				și practică frecvent astfel de activități.
 			</p>
@@ -867,15 +867,6 @@
 					</p>
 					<p class="content-text">
 						În prezent, Florin are doar unu-doi prieteni experimentați care organizează astfel de ieșiri, însă de multe ori programul lor nu se potrivește, ceea ce îl face să rateze numeroase ocazii de a merge pe munte. Consideră că ar participa mult mai des la drumeții dacă ar avea o modalitate simplă și sigură de a găsi persoane potrivite.
-					</p>
-					<p class="content-text">
-						Pentru Florin este important să meargă pe munte doar cu persoane experimentate, pentru siguranță și pentru a învăța de la cei cu mai multă experiență. I-ar fi utilă o aplicație cu funcționalități precum:
-						 <ul class="highlight-box" style="margin: 0; padding: 10px 30px;">
-							<li>Posibilitatea de a vedea nivelul de experiență și istoricul de trasee al fiecărui utilizator;</li>
-							<li>Un sistem de filtrare a participanților în funcție de nivelul de pregătire;</li>
-							<li>O secțiune de chat între utilizatori sau un chat dedicat fiecărei drumeții;</li>
-							<li>O interfață intuitivă și ușor de folosit, care să permită personalizarea traseelor și vizualizarea clară a punctelor de interes.</li>
-						</ul>
 					</p>
 				</div>
 
