Added LandingPage link-button

--- a/index.html
+++ b/index.html
@@ -351,6 +351,46 @@
           grid-template-columns: 1fr;
         }
       }
+      /* === butonul de demo de la secțiunea LandingPage === */
+      .demo-link {
+        display: inline-block;
+        margin-top: 8px;
+        padding: 8px 14px;
+        border: 2px solid #97c680;
+        border-radius: 8px;
+        color: #2c5f2d;
+        text-decoration: none;
+        font-weight: 600;
+        transition: all 0.2s ease;
+      }
+      .demo-link:hover {
+        background: #97c680;
+        color: #fff;
+        transform: translateY(-1px);
+      }
+      /* === Buton Vezi LandingPage === */
+      .demo-link {
+        display: inline-block;
+        margin: 15px auto 25px;
+        padding: 10px 18px;
+        border: 2px solid #97c680;
+        border-radius: 10px;
+        color: #2c5f2d;
+        background: white;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 1.05em;
+        transition: all 0.25s ease;
+      }
+      .demo-link:hover {
+        background: #97c680;
+        color: white;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+      #landingpage .demo-link {
+        margin: 12px 0 25px 0;
+      }
     </style>
   </head>
   <body>
@@ -1779,6 +1819,16 @@
 
       <section class="section" id="landingpage">
         <h3 class="subsection-title">LandingPage</h3>
+
+        <a
+          class="demo-link"
+          href="https://catastan.github.io/landingpage/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Vezi LandingPage
+        </a>
+
         <div class="mockup-grid" id="landingGrid"></div>
       </section>
     </div>
@@ -1820,11 +1870,13 @@
       landingImages.forEach((name) => {
         const item = document.createElement("div");
         item.className = "mockup-item";
+
         const img = document.createElement("img");
         img.src = `landingpage/${name}`;
         img.alt = name;
         img.addEventListener("error", () => item.remove());
         item.appendChild(img);
+
         landingGrid.appendChild(item);
       });
     </script>
