--- a/index.html
+++ b/index.html
@@ -2624,7 +2624,7 @@
 	<h2 class="section-title" id="milestone4">Milestone 4</h2>
 	<div class="container">
 		<section class="section">
-			<h3 class="subsection-title">Interviuri cu potențiali utilizatori</h3>
+			<h3 class="section-title">Interviuri cu potențiali utilizatori</h3>
 
 			<div class="interviews-grid">
 				<div class="interview-card">
@@ -2695,7 +2695,7 @@
 		</section>
 
 		<section class="section">
-			<h3 class="subsection-title">User Persona — Andrei Popescu</h3>
+			<h3 class="section-title">User Persona — Andrei Popescu</h3>
 			
 			<div class="persona-card">
 				<div class="persona-header">
@@ -2921,7 +2921,7 @@
 		</section>
 
 		<section class="section">
-			<h3 class="subsection-title">User Stories</h3>
+			<h3 class="section-title">User Stories</h3>
 
 			<ul class="user-stories">
 				<li>Ca drumeț cu experiență medie, vreau să filtrez traseele după dificultate, durată și locație, ca să pot găsi rapid un traseu adecvat nivelului meu și timpului disponibil.</li>
@@ -2933,7 +2933,7 @@
 		</section>
 
 		<section class="section">
-			<h3 class="subsection-title">User Flows</h3>
+			<h3 class="section-title">User Flows</h3>
 
 			<div class="flow-intro">
 				<p>Flow-ul aplicației este centrat pe <strong>Home / Trails List</strong>, care servește drept punct principal de navigare. Aplicația permite utilizatorilor să exploreze, să participe și să gestioneze trasee montane într-un mod intuitiv și organizat.</p>
@@ -3151,7 +3151,7 @@
 		</section>
 
 		<section class="section">
-			<h3 class="subsection-title">Concluzia interviurilor</h3>
+			<h3 class="section-title">Concluzia interviurilor</h3>
 			
 			<div class="conclusion-card">
 				<div class="conclusion-content">
