update landing page link

--- a/index.html
+++ b/index.html
@@ -2607,7 +2607,7 @@
 
         <a
           class="demo-link"
-          href="https://catastan.github.io/landingpage/"
+          href="https://trailmates-app.github.io/"
           target="_blank"
           rel="noopener noreferrer"
         >
