--- a/index.html
+++ b/index.html
@@ -3459,7 +3459,7 @@
 
 			<h4 style="color: #2c5f2d; margin-top: 50px; margin-bottom: 15px;">Concluzii </h4>
 			<div class="highlight-box">
-				<h3 style="color: #2c5f2d;">Analiza Comparativă a Canalelor (Punctul 4)</h3>
+				<h3 style="color: #2c5f2d;">Analiza comparativă a canalelor</h3>
 				<p class="content-text">
 					Analiza conversiilor și a surselor de trafic (UTM vs. Direct) a confirmat că <strong>încrederea este factorul determinant</strong> în generarea de lead-uri de calitate. Deși traficul organic social (Facebook) este o sursă constantă, cel mai mare succes a venit din recomandările personale.
 				</p>
