add more facebook posts

--- a/index.html
+++ b/index.html
@@ -3429,6 +3429,17 @@
 				</div>
 				
 				<!-- Aici adaugam alte postari -->
+				<div class="campaign-post-item">
+					<span class="source">Facebook - Grup: Drumeții cu rucsacul în spate</span>
+					<img src="campaign/post_fb_6.jpeg" alt="Screenshot Postare Facebook 6" />
+					<a href="todo" target="_blank">Vezi link postare (Facebook)</a>
+				</div>
+
+        <div class="campaign-post-item">
+					<span class="source">Facebook - Grup: Hai pe munte!</span>
+					<img src="campaign/post_fb_8.jpeg" alt="Screenshot Postare Facebook 8" />
+					<a href="https://www.facebook.com/share/p/1NVE1ZeFDF/" target="_blank">Vezi link postare (Facebook)</a>
+				</div>
 				<!-- <div class="campaign-post-item">
 					<span class="source">WhatsApp - Grup: Nume grup</span>
 					<img src="campaign/post_wa_6.png" alt="Screenshot Postare WhatsApp 6" />
