--- a/index.html
+++ b/index.html
@@ -3248,7 +3248,7 @@
 			<div class="highlight-box">
 				<h3>Rezumatul chestionarului</h3>
 				<p class="content-text">
-					Chestionarul a înregistrat un total de <strong style="color: #2c5f2d;">133 de de accesări</strong> și a generat <strong style="color: #2c5f2d;">36 de răspunsuri valide (lead-uri)</strong>, rezultând o rată de conversie solidă de <strong style="color: #2c5f2d;">36.36%</strong> în rândul utilizatorilor expuși. Această cifră validează interesul imediat generat de propunerea de valoare a Landing Page-ului.
+					Chestionarul a înregistrat un total de <strong style="color: #2c5f2d;">133 de de accesări</strong> și a generat <strong style="color: #2c5f2d;">39 de răspunsuri valide (lead-uri)</strong>, rezultând o rată de conversie solidă de <strong style="color: #2c5f2d;">29.32%</strong> în rândul utilizatorilor expuși. Această cifră validează interesul imediat generat de propunerea de valoare a Landing Page-ului.
 				</p>
 				<div style="text-align: center; margin: 20px 0 10px;">
 					<img 
@@ -3325,7 +3325,7 @@
 		<section class="section" id="lead-generation-campaign">
 			<h3 class="section-title">3. Lead generation campaign</h3>
 			<p class="content-text">
-				După ce am strâns deja <strong style="color: #2c5f2d;">peste 80 de răspunsuri inițiale</strong>, ne-am decis să diferențiem link-urile pentru a urmări mai eficient sursa traficului. Am lansat o campanie de promovare pe canalele sociale relevante, concentrându-ne pe grupuri active de pasionați de munte, utilizând link-uri personalizate (UTM) pentru a urmări sursa traficului. Mai jos sunt documentate postările realizate în campanie.
+				După ce am strâns deja <strong style="color: #2c5f2d;">peste 80 de vizitatori inițiali</strong>, ne-am decis să diferențiem link-urile pentru a urmări mai eficient sursa traficului. Am lansat o campanie de promovare pe canalele sociale relevante, concentrându-ne pe grupuri active de pasionați de munte, utilizând link-uri personalizate (UTM) pentru a urmări sursa traficului. Mai jos sunt documentate postările realizate în campanie.
 			</p>
 			
 			<h4 style="color: #2c5f2d; margin-top: 30px; margin-bottom: 15px;">Segmentarea traficului</h4>
